--- a/src/app/components/tabela/tabela.component.html
+++ b/src/app/components/tabela/tabela.component.html
@@ -124,14 +124,14 @@
             </div>
           </div>
 
-          <div *ngIf="filtroTabela.categoria === 'Empresarial'" style="padding-bottom: 15px">
-            <span>
-              <mat-slide-toggle (ngModelChange)="filtraTabela()" [(ngModel)]="filtroTabela.livreAdesao" labelPosition="before">Livre Adesão</mat-slide-toggle>
-            </span>
-            <span style="padding-left: 25px">
-              <mat-slide-toggle (ngModelChange)="filtraTabela()" [(ngModel)]="filtroTabela.compulsoria" labelPosition="before">Compulsoria</mat-slide-toggle>
-            </span>
-          </div>
+          <mat-form-field *ngIf="filtroTabela.categoria === 'Empresarial'" appearance="outline" style="width: 100%">
+            <mat-label>Tipo Adesão</mat-label>
+            <mat-select (ngModelChange)="filtraTabela()" [(ngModel)]="filtroTabela.tipoAdesao">
+              <mat-option [value]="'Livre Adesão'">Livre Adesão</mat-option>
+              <mat-option [value]="'Compulsória'">Compulsória</mat-option>
+              <mat-option [value]="''">Ambas</mat-option>
+            </mat-select>
+          </mat-form-field>
 
           <mat-form-field *ngIf="filtroTabela.categoria === 'Empresarial'" appearance="outline" style="width: 100%">
             <mat-label>MEI</mat-label>
