para listas de 1o nivel simples (profissao, entidade, hosp, lab) já trazer ordenado crescente alfabetico

--- a/src/app/components/administradora/administradora.component.html
+++ b/src/app/components/administradora/administradora.component.html
@@ -14,7 +14,7 @@
       <br/>
 
       <mat-card-content>
-        <mat-table [dataSource]="dataSourceAdministradora" matSort class="mat-elevation-z8">
+        <mat-table [dataSource]="dataSourceAdministradora" matSortActive="nome" matSortDirection="asc" matSort class="mat-elevation-z8">
           <ng-container matColumnDef="id">
             <mat-header-cell *matHeaderCellDef mat-sort-header> Id </mat-header-cell>
             <mat-cell *matCellDef="let administradora" (click)="selecionaAdministradora(administradora)" class="mouse-pointer"> {{administradora.id}} </mat-cell>
