--- a/src/app/components/operadora/operadora.component.html
+++ b/src/app/components/operadora/operadora.component.html
@@ -14,7 +14,7 @@
       <br/>
 
       <mat-card-content>
-        <mat-table [dataSource]="dataSourceOperadora" matSort class="mat-elevation-z8">
+        <mat-table [dataSource]="dataSourceOperadora" matSortActive="nome" matSortDirection="asc" matSort class="mat-elevation-z8">
           <ng-container matColumnDef="id">
             <mat-header-cell *matHeaderCellDef mat-sort-header> Id </mat-header-cell>
             <mat-cell *matCellDef="let operadora" (click)="selecionaOperadora(operadora)" class="mouse-pointer"> {{operadora.id}} </mat-cell>
