--- a/src/app/components/usuario/usuario.component.html
+++ b/src/app/components/usuario/usuario.component.html
@@ -14,7 +14,7 @@
       <br/>
 
       <mat-card-content>
-        <mat-table #usuariosSort="matSort" [dataSource]="dataSourceUsuario" matSort class="mat-elevation-z8">
+        <mat-table #usuariosSort="matSort" [dataSource]="dataSourceUsuario" matSortActive="nome" matSortDirection="asc" matSort class="mat-elevation-z8">
           <ng-container matColumnDef="id">
             <mat-header-cell *matHeaderCellDef mat-sort-header> Id </mat-header-cell>
             <mat-cell *matCellDef="let usuario" (click)="selecionarUsuario(usuario)" class="mouse-pointer"> {{usuario.id}} </mat-cell>
