--- a/src/app/components/profissao/profissao.component.html
+++ b/src/app/components/profissao/profissao.component.html
@@ -14,7 +14,7 @@
       <br/>
 
       <mat-card-content>
-        <mat-table [dataSource]="dataSourceProfissao" matSort class="mat-elevation-z8">
+        <mat-table [dataSource]="dataSourceProfissao" matSortActive="nome" matSortDirection="asc" matSort class="mat-elevation-z8">
           <ng-container matColumnDef="id">
             <mat-header-cell *matHeaderCellDef mat-sort-header> Id </mat-header-cell>
             <mat-cell *matCellDef="let administradora" (click)="selecionaProfissao(administradora)" class="mouse-pointer"> {{administradora.id}} </mat-cell>
